--- a/rolesService/pom.xml
+++ b/rolesService/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.epam</groupId>
     <artifactId>rolesService</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <packaging>pom</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
