--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,6 @@
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
-	<modules>
-		<module>rolesService</module>
-	</modules>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -63,6 +60,13 @@
 			<groupId>io.springfox</groupId>
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.epam</groupId>
+			<artifactId>rolesService</artifactId>
+            <version>1.0-SNAPSHOT</version>
+			<scope>system</scope>
+			<systemPath>${project.basedir}/src/main/resources/rolesService-1.0-SNAPSHOT.jar</systemPath>
 		</dependency>
 	</dependencies>
 
